# opengate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-crates.yml  publish-packages.yml  release.yml
bridge/: Cargo.toml
bridge/src/: main.rs
crates/opengate/: Cargo.toml
crates/opengate-models/: Cargo.toml
crates/opengate-models/src/: lib.rs
crates/opengate/src/: app.rs  auth.rs  db.rs  db_ops.rs  events.rs  lib.rs  main.rs  mcp.rs
crates/opengate/src/handlers/: activity.rs  agents.rs  artifacts.rs  auth.rs  events.rs  knowledge.rs  mod.rs  projects.rs  questions.rs  schema.rs  stats.rs  tasks.rs  triggers.rs  usage.rs  webhooks.rs  ws.rs
crates/opengate/src/storage/: mod.rs
crates/opengate/src/storage/sqlite/: mod.rs
crates/opengate/tests/: integration.rs
