[package]
name = "opengate-bridge"
version.workspace = true
edition.workspace = true
description = "Lightweight agent heartbeat & notification polling daemon for OpenGate"

[[bin]]
name = "opengate-bridge"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
